--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -24,6 +24,12 @@
     overflow-x: hidden;
   }
 
+  /* Dark mode base */
+  .dark body {
+    color: theme('colors.gray.100');
+    background-color: theme('colors.gray.900');
+  }
+
   img, svg, video {
     max-width: 100%;
     height: auto;
